@@ -2,6 +2,7 @@ unity-api (8.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * unity::util - add GObject shared memory utility classes
     and helper methods.
+  * unity::util - add Glib memory management utility functions.
 
  -- Pete <pete.woods@canonical.com>  Wed, 11 Jan 2017 16:07:23 +0000
 
